# backend-prac-polynom-operator

./: CMakeLists.txt  db.txt  main.cpp
app/: tabs_drawer.h  window.h
core/: CMakeLists.txt  linked_list.h  monomial.h  parser.h  polynomial.h  single_linked_list.h
drawers/: button.h  inoutput_field.h  table_drawer.h  table_header_drawer_interface.h  table_header_drawers.h  table_interface.h
elements/: button.h  fab.h  inoutput_field.h  rounded_rectangle.h  table.h
src/: button.cpp  center_positioned_string.cpp  inoutput_field.cpp  monomial.cpp  polynomial.cpp  rounded_rectangle.cpp  single_linked_list.cpp  table.cpp  table_drawer.cpp  tabs_drawer.cpp  window.cpp  window_manager.cpp
